# cryptograf

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  Makefile
.github/workflows/: windows-release.yml
installer/: cryptograf.nsi  stage.ps1
resources/: app.rc  cryptograf.desktop  icons.qrc
resources/diagrams/: render_svgs.py
src/: aes_cipher.cpp  aes_cipher.hpp  diagram_widgets.hpp  digital_sign.cpp  digital_sign.hpp  gcmsiv.cpp  gcmsiv.hpp  gui_main.cpp  main.cpp
